# contamination-detection

./: .gitignore  CMakeLists.txt  default.nix  derivation.nix  ui.glade
app/: main.cpp
cmake/: Boost.cmake  Gtkmm.cmake  Misc.cmake
include/: app.h  camera.h  detector.h  predefined.h.in
src/: app.cpp  camera.cpp  detector.cpp
